# Issaacgmy_dog

./: README.md  requirements.txt
LidarSensor/: OPTIMIZATION_SUMMARY.md  README.md  setup.py
LidarSensor/LidarSensor/: __init__.py  base_sensor.py  isaacgym_camera_sensor.py  lidar_sensor.py
datasets/: retarget_config_a1.py  retarget_config_aliengo.py  retarget_kp_motions.py
datasets/mocap_motions_aliengo/: canter0.txt  canter1.txt  canter2.txt  left_turn0.txt  left_turn1.txt  pace0.txt  pace1.txt  pace2.txt  right_turn0.txt  right_turn1.txt  trot0.txt  trot1.txt  trot2.txt
datasets/mocap_motions_go2/: canter0.txt  canter1.txt  canter2.txt  left_turn0.txt  left_turn1.txt  pace0.txt  pace1.txt  pace2.txt  right_turn0.txt  right_turn1.txt  trot0.txt  trot1.txt  trot2.txt
legged_gym/docs/: dolang_delivery_files.md  dolang_responsibility_matrix.md  (+1 more)
legged_gym/resources/robots/sr01/: CMakeLists.txt  package.xml
legged_gym/resources/robots/sr01/config/: joint_names_QuadrupedRobotги2026гй V1.2-URDF-20260508-V3.yaml
legged_gym/resources/robots/sr01/launch/: display.launch  gazebo.launch
legged_gym/resources/robots/sr01/meshes/: FL_calf_Link.STL  FL_foot_Link.STL  FL_hip_Link.STL  FL_thigh_Link.STL  FR_calf_Link.STL  FR_foot_Link.STL  FR_hip_Link.STL  FR_thigh_Link.STL  RL_calf_Link.STL  RL_foot_Link.STL  RL_hip_Link.STL  RL_thigh_Link.STL  RR_calf_Link.STL  RR_foot_Link.STL  RR_hip_Link.STL  RR_thigh_Link.STL  base_link.STL
legged_gym/resources/robots/sr01/urdf/: QuadrupedRobotги2026гй V1.2-URDF-20260508-V3.csv  sr02h_v1_simple_collision.urdf
(+157 files in other folders)
